# coriolis

./: .gitignore  Makefile  README.md  Vagrantfile  coriolis  instrument.sh  requirements.txt  tests.sh  verify.sh
cli/: coriolis_cli.py
common/: aggregation_steps.py  checkpoint_table.py  jarl_rule.py  printer.py  transformation_generator.py  utils.py
coriolis/: Makefile  coriolis  requirements.txt
dev/: provision.sh
docs/: entregables.txt  jarl_changelog.md  jarl_spec.md
examples/concuSpring/: CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.cpp  run_coriolis.sh
examples/concuSpring/config/: config.json
examples/concuSpring/pluggins/json/: value.h
examples/concuSpring/src/: Client.cpp  Client.h  ClientsManager.cpp  ClientsManager.h  Concurrentes.h  DistributionCenter.cpp  DistributionCenter.h  DistributionsManager.cpp  DistributionsManager.h  Flower.cpp  Flower.h  FlowerProducer.cpp  FlowerProducer.h  FlowerSimulator.cpp  FlowerSimulator.h  LogPipe.cpp  LogPipe.h  Logger.cpp  Logger.h  Order.cpp  Order.h  PointOfSale.cpp  PointOfSale.h  PointOfSalesManager.cpp  PointOfSalesManager.h  ProducersManager.cpp  ProducersManager.h
examples/concuSpring/src/protocol/: FlowerProtocol.cpp  FlowerProtocol.h  NamedPipe.cpp  NamedPipe.h  Pipe.cpp  Pipe.h
examples/concuSpring/src/utils/: ArgumentsProcessor.cpp  ArgumentsProcessor.h  ConcuMath.cpp  ConcuMath.h  GlobalConfig.cpp  GlobalConfig.h  MemoryReader.cpp  MemoryReader.h  MemoryWriter.cpp  MemoryWriter.h  Serializer.cpp  Serializer.h  types.h  utils.cpp  utils.h
parser/: .gitignore  Jarl.g4  Jarl.interp  JarlActualListener.py  JarlLexer.interp  JarlLexer.py  JarlLexer.tokens  JarlListener.py  JarlParser.py  JarlParserCLI.py  JarlParserExceptions.py  JarlRule.py  Makefile  (+9 more)
(+206 files in other folders)
